--- a/ionic/ionic/www/index.html
+++ b/ionic/ionic/www/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
 
-    <link href="lib/ionic/scss/ionic.css" rel="stylesheet">
+    <!--<link href="lib/ionic/scss/ionic.css" rel="stylesheet">-->
+    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700' rel='stylesheet' type='text/css'>
+    <link href="lib/ionic/css/ionic.css" rel="stylesheet">
+    <link href="css/ionic_and_overrides.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
@@ -18,12 +21,22 @@
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
+    <!-- google maps javascript -->
+    <!--<script src="//maps.googleapis.com/maps/api/js?key=AIzaSyB16sGmIekuGIvYOfNoW9T44377IU2d2Es&sensor=true"></script>-->
+
+    <script src="www/lib/lodash/dist/lodash.min.js"></script>
+    <script src="js/angular-google-maps.min.js"></script>
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
+    <script src="dash/dash.controller.js"></script>
+    <script src="nearby/nearby.controller.js"></script>
+    <script src="matches/matches.controller.js"></script>
+
+
   </head>
-  <body ng-app="starter" animation="slide-left-right-ios7">
+  <body ng-app="pooler" animation="slide-left-right-ios7">
     <!-- 
       The nav bar that will be updated as we navigate between views.
     -->
