--- a/ionic/ionic/www/index.html
+++ b/ionic/ionic/www/index.html
@@ -30,6 +30,7 @@
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
+    <script src="js/uberAuth.service.js"></script>
     <script src="dash/dash.controller.js"></script>
     <script src="nearby/nearby.controller.js"></script>
     <script src="matches/matches.controller.js"></script>
