registed droid device - b/e and f/e

--- a/ionic/ionic/www/index.html
+++ b/ionic/ionic/www/index.html
@@ -58,6 +58,8 @@
     <script src="nearby/nearby.service.js"></script>
     <script src="matches/message.directive.js"></script>
     <script src="lib/angular-translate/angular-translate.min.js"></script>
+    <script src="js/ng-cordova-push-notifications.js"></script>
+    <script src="js/push-notification-config.js"></script>
 
   </head>
   <body ng-app="pooler" animation="slide-left-right-ios7">
