trip request emitter/push motif

--- a/ionic/ionic/www/index.html
+++ b/ionic/ionic/www/index.html
@@ -60,6 +60,7 @@
     <script src="lib/angular-translate/angular-translate.min.js"></script>
     <script src="js/ng-cordova-push-notifications.js"></script>
     <script src="js/push-notification-config.js"></script>
+    <script src="js/pushNotificationReceiver.service.js"></script>
 
   </head>
   <body ng-app="pooler" animation="slide-left-right-ios7">
